cambio implementacion de command runner