@@ -4,6 +4,7 @@ import org.springframework.stereotype.Service;
 import org.ungs.gorgory.service.CommandRunnerService;
 
 import java.io.BufferedReader;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStreamReader;
 
@@ -13,7 +14,12 @@ public class CommandRunnerServiceImpl implements CommandRunnerService {
     public String execute(String command) {
         System.out.println(command);
         try {
-            Process process = Runtime.getRuntime().exec(command);
+            ProcessBuilder builder = new ProcessBuilder();
+            String pwd = System.getenv("PWD");
+            builder.environment().putAll(System.getenv());
+            builder.command("sh", "-c", command);
+            builder.directory(new File(pwd));
+            Process process = builder.start();
             process.waitFor();
 
             BufferedReader reader =
